fixed overlappy nav items

--- a/css/biodiversity-stylesheet.css
+++ b/css/biodiversity-stylesheet.css
@@ -258,14 +258,16 @@
 		color:black;
 		text-decoration: none;
 	}
+	.nav-item {
+		margin-top: 10px;
+		overflow: hidden;
+	}
 	.nav-item li {
 
 	}
 	.nav-item img {
 		width: 99%;
 		margin: 0 auto;
-		vertical-align: bottom;
-
 	}
 
 	/*boostrap breakpoint override */
